--- a/about.html
+++ b/about.html
@@ -96,6 +96,7 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<h1 class="ui-title-page">О компании</h1>
+							<div class="decor-2 decor-2_mod-a decor-2_mod_white"></div>
 						</div>
 					</div>
 				</div>
@@ -283,7 +284,7 @@
 	<script src="assets/js/doubletaptogo.js"></script>
 	<script type="text/javascript" src="https://vk.com/js/api/openapi.js?160"></script>
 	<script type="text/javascript">
-		//VK.Widgets.CommunityMessages("vk_community_messages", 133204786, {tooltipButtonText: "Есть вопрос?"});
+		VK.Widgets.CommunityMessages("vk_community_messages", 133204786, {tooltipButtonText: "Есть вопрос?"});
 	</script>
 	<script src="assets/js/custom.js"></script>
 </body>
