--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 	<script src="assets/js/doubletaptogo.js"></script>
 	<script type="text/javascript" src="https://vk.com/js/api/openapi.js?160"></script>
 	<script type="text/javascript">
-		//VK.Widgets.CommunityMessages("vk_community_messages", 133204786, {tooltipButtonText: "Есть вопрос?"});
+		VK.Widgets.CommunityMessages("vk_community_messages", 133204786, {tooltipButtonText: "Есть вопрос?"});
 	</script>
 	<script src="assets/js/custom.js"></script>
 </body>
