--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
 				<div class="row">
 					<div class="col-xs-12">
 						<h3 class="ui-title-block ui-title-block_mod-a">Рассчитать стоимость</h3>
-						<form action="calc.php" method="post" class="form">
+						<form action="calc.php" method="post" class="form" enctype="multipart/form-data">
 							<div class="row">
 								<div class="col-xs-12 col-md-6">
 									<div class="form-group">
