--- a/about.html
+++ b/about.html
@@ -142,11 +142,12 @@
 									</div>
 									<div class="form-group">
 										<label>Сообщение</label>
-										<textarea class="form-control" name="message" rows="5"></textarea>
+										<textarea class="form-control" name="message" rows="9"></textarea>
 									</div>
+									<!--
 									<div class="form-group">
 										<input type="file" name="file">
-									</div>
+									</div>-->
 								</div>
 							</div>
 							<div class="row">
